--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "tesseract.js": "^5.0.5",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4"
   }
 }
