--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "postinstall": "bunx --bun nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.14.1",
     "nuxt": "^3.10.3",
     "tesseract.js": "^5.0.5",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.11.4"
   }
 }
